feat: add jwt authorization
