# server/src/main/java/com/vadim/server/exception/BadRequestException.java
@@ -3,10 +3,11 @@ package com.vadim.server.exception;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.ResponseStatus;
 
-@ResponseStatus(HttpStatus.NOT_FOUND)
-public class NotFoundException extends RuntimeException {
+@ResponseStatus(HttpStatus.BAD_REQUEST)
+public class BadRequestException extends RuntimeException {
 
-    public NotFoundException(final String message) {
+    public BadRequestException(final String message) {
         super(message);
     }
+
 }
