# server/src/main/java/com/vadim/server/exception/ConflictException.java
@@ -3,10 +3,10 @@ package com.vadim.server.exception;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.ResponseStatus;
 
-@ResponseStatus(HttpStatus.NOT_FOUND)
-public class NotFoundException extends RuntimeException {
+@ResponseStatus(HttpStatus.CONFLICT)
+public class ConflictException extends RuntimeException {
 
-    public NotFoundException(final String message) {
+    public ConflictException(final String message) {
         super(message);
     }
 }
