# server/src/main/java/com/vadim/server/security/TokenValidator.java
@@ -1,0 +1,8 @@
+package com.vadim.server.security;
+
+public interface TokenValidator {
+
+    boolean validateAccessToken(String accessToken);
+
+    boolean validateRefreshToken(String refreshToken);
+}
